# learnopengl_tutorial

./: CMakeLists.txt  Cumera.h  Mesh.h  Model.h  Shader.h  main.cpp
additional/: glad.c  glad.h
shaders/: lamp.vert  lighting.frag  lighting.vert  model_loading.frag  model_loading.vert
